@@ -1,3 +1,8 @@
+2008-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Update of used plugin API to v71.
+
+
 2008-06-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Make plugin also work together with GTK-2.8. Thanks to Nick for 
